                W I N G   C H A N G E S
----------------------------------------------------------
This file tracks the changes to Wing over time. Especially
with respect to new features and compatibility changes.
==========================================================

2016-02-21
 * Added Wing::Role::Result::UriPartOnInit to set a uri_part only when an object is first created.

2016-02-04
 * wing.js errors now go away after 12 seconds and warnings go away after 10 seconds.

2016-01-28
 * Force UTC time zone on DateTime objects going into/out of the database.

2016-01-26
 * Wing::ContentFilter makes a shorter prettier note for external links now.

2016-01-15
 * Thanks to Chan Wilson for all his feedback on this set of changes.
 * Added a message to wing class to let you know where you can access your newly created object.
 * Added Test::Trap and JSON::XS to bin/setup/03_install_perl_modules.sh to make installs flow easier.
 * Added a note as to where you can find the logs in README.txt.
 * Indicated what services need to be restarted after you add a class in README.txt. 

2016-01-12
 * Removed fetch_create_options from wing.angular.js because fetch_options is better.
 * Added WingAngular.pod documentation for wing.angular.js.
 * Added the Wing Command kick module so that you can kick buried wingman jobs.

2015-12-29
 * Updated the javascript libraries to the latest versions.

2015-12-17 
 * Added support for is_auto_increment to Wing::Role::Result::Field dbic definitions.
 * Added unique qualifiers, so you could have uniqueness within an object type.

2015-11-24
 * Changed Wing::Role::Result::Parent to allow undef to be set on a relationship that is not required or unique.
 * Added on_success to options and behavior for all() and search() in objectListManager in wing.angular.js.

2015-11-20
 * Added fetch_options() to wing.angular.js objectListManager.
 * Added force-number directive to wing.angular.js.

2015-10-20