@@ -1,0 +1,11 @@
+These instructions update the instructions in README.txt for Amazon Linux, although it should also work for CentOS and RHEL.
+
+Start by prepping the system:
+=============================
+
+ yum -y install ncurses-devel gcc make glibc-devel gcc-c++ zlib-devel openssl-devel expat-devel glib2-devel mysql-libs libxml2-devel mysql-common mysql-devel mysql libjpeg-turbo-devel libpng-devel freetype-devel nginx git
+
+
+Then perform all the steps in README.txt.
+=========================================
+
