@@ -1,8 +1,4 @@
 wget http://www.cpan.org/src/5.0/perl-5.16.2.tar.gz
 tar xfz perl-5.16.2.tar.gz
-wget http://nginx.org/download/nginx-1.2.6.tar.gz
-tar xfz nginx-1.2.6.tar.gz
-wget http://superb-dca2.dl.sourceforge.net/project/pcre/pcre/8.32/pcre-8.32.tar.gz
-tar xfz pcre-8.32.tar.gz
 wget --no-check-cert https://github.com/kr/beanstalkd/archive/v1.9.tar.gz
 tar xfz v1.9.tar.gz
